--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.0.16
+- Fix a visualisation issue where commands didn't look like they were active on EarGear
+- Fix an issue when commands ending was occasionally missed (requiring a reconnection)
+
 0.0.15
 - The DIGITAiL App is now Crumpet, and no longer controls only DIGITAiLs
 - Initial support for EarGear, so it's ready for when yours arrive
