--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.0.18
+- Only show Ear Poses and Glow Tips entries when connected to the respective devices where they make sense
+- Fix the L Flopper Ear Pose pose
+- Allow running a move list directly from the move list editor
+
 0.0.17
 - Add EarGear Poses, so you can position your ears in various ways without autohoming
 - Switch to a more obvious homing icon for the moves and poses pages
