--- a/data/res/values/strings.xml
+++ b/data/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="notification_title">DIGITAiL</string>
-<string name="notification_message">Connected to your tail</string>
-<string name="ticker_text">Tail controller is connected to your tail</string>
+<string name="notification_title">Crumpet</string>
+<string name="notification_message">Connected to your gear</string>
+<string name="ticker_text">The controller is connected to your gear</string>
 </resources>
