Update changelog for 0.0.20

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+0.0.20
+- Rework ShakeToWag into a more full featured gesture support system, Gear Gestures
+- Now more explicit about the required permission (yes, we really do need that, or we can't find your gear)
+- Add EarGear poses to the pick a command sheet (making them available to alarms, move lists, and gear gestures)
+- Fix some missing items in the sidebar menu when connected to your gear
+- A couple of small layout fixes
+
 0.0.19
 - Add a super experimental Shake To Wag gesture-detection feature
 - Add EarGear microphone swapping and rebalancing to Settings
